--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,11 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- `` MAIN APP VIEW `` -->
-    <string name="app_name">Placeholder</string>
-    <string name="app_widget_description">Placeholder</string>
+    <string name="app_name"><xliff:g id="tp" translatable="false">Purramid</xliff:g> Time</string>
+    <string name="app_widget_description"><xliff:g id="tp" translatable="false">Purramid</xliff:g> Time Tools</string>
     <string name="clock_title">Clock</string>
-    <string name="probabilities_title">Probabilities</string>
-    <string name="randomizers_title">Randomizers</string>
-    <string name="screen_mask_title">Screen Mask</string>
-    <string name="spotlight_title">Spotlight</string>
-    <string name="timers_title">Timers</string>
-    <string name="traffic_light_title">Traffic Light</string>
+    <string name="stopwatch_title">Stopwatch</string>
+    <string name="timer_title">Timer</string>
     <string name="about">About this App</string>
 
     <!-- `` UNIVERSAL TERMS `` -->
@@ -51,6 +47,7 @@
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="optimize">Optimize</string>
+    <string name="notification_sound_icon">Notification Sound</string>
 
     <!-- `` CLOCK APP `` -->
     <string name="clock_settings_title">Clock Settings</string>
@@ -409,8 +406,6 @@
     <string name="sounds">Stopwatch sounds</string>
     <string name="setting_add_another_timer">Add Another Timer</string>
     <string name="max_timers_reached_snackbar">Placeholder</string>
-
-
 
 
     <!-- `` ABOUT THIS APP `` -->
